--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -925,6 +925,41 @@ function openEditTransactionModal(id) {
     .catch(error => console.error('Error:', error));
 }
 
+
+
+
+// NEW RENAME LOGIC
+    function openRenameModal(type) {
+        const title = document.getElementById('renameTitle');
+        const label = document.getElementById('renameLabel');
+        const input = document.getElementById('renameInput');
+        const form = document.getElementById('renameForm');
+        const targetIdField = document.getElementById('renameTargetId');
+
+        if (type === 'debtor') {
+            title.innerText = "Rename Debtor";
+            label.innerText = "New Debtor Business Name:";
+            input.value = "{{ selected_case.debtor_business_name or '' }}";
+            targetIdField.value = "{{ selected_case.id if selected_case else '' }}";
+            form.action = "{{ url_for('case.rename_debtor') }}";
+        } else {
+            title.innerText = "Rename Client";
+            label.innerText = "New Client Business Name:";
+            input.value = "{{ case_client.business_name if case_client else '' }}";
+            targetIdField.value = "{{ case_client.id if case_client else '' }}";
+            form.action = "{{ url_for('client.rename_client') }}";
+        }
+        openModal('renameModal');
+    }
+
+    // Delete Functions
+    function deleteNote(id) {
+
+
+
+
+
+    
     // Delete Functions
     function deleteNote(id) {
       if (confirm("Delete this note?")) {
@@ -991,6 +1026,7 @@ function openEditTransactionModal(id) {
   
 </body>
 </html>
+
 
 
 
