--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -706,7 +706,7 @@ th { background:#f5f5f5; }
                 <td class="trans-actions" style="text-align:center; white-space:nowrap;">
                   <a href="javascript:void(0)" class="flat-action" onclick="openEditTransactionModal({{ t.id }})">✏️</a>
                   <span style="color:#ccc;">|</span>
-                  <a href="javascript:deleteTransaction({{ t.id }})" class="flat-action flat-del">del</a>
+                  <a href="javascript:deleteTransaction({{ t.id }})" class="flat-action flat-del">❌</a>
                 </td>
               </tr>
               {% endfor %}
@@ -1012,6 +1012,7 @@ window.addEventListener('error', function(e) {
   
 </body>
 </html>
+
 
 
 
