--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -599,7 +599,7 @@ th { background:#f5f5f5; }
         {% endif %}
     </form>
 </div>
-
+{% endif %}
 
 {% if custom_fields %}
         <div style="margin-top: 15px; text-align: right;">
@@ -1071,8 +1071,6 @@ window.addEventListener('error', function(e) {
   
 </body>
 </html>
-
-
 
 
 
